--- a/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -10,7 +10,7 @@ layout.navbar.browse=Browse
 layout.navbar.login=Sign in
 layout.navbar.logout=Sign out
 layout.navbar.tools=Tools
-layout.navbar.tools.leave=Exit Tools
+layout.navbar.tools.leave=Leave Tools
 layout.navbar.tools.surfaces=Surfaces
 
 layout.title.landingPage=Welcome back on WayPalm!
