--- a/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/i18n/ui.properties
@@ -47,5 +47,5 @@ page.constructor.newArea.form.title.label=Enter area title
 page.constructor.newArea.form.title.placeholder=Choose name you like or would like to see
 page.constructor.newArea.form.kind.label=Select origin
 page.constructor.newArea.form.kind.placeholder=What should it be - plain map or house levels?
-page.constructor.newArea.form.kind.plain=Plain surface
+page.constructor.newArea.form.kind.plane=Plane surface
 page.constructor.newArea.form.kind.building=Building plan
