--- a/README
+++ b/README
@@ -5,3 +5,6 @@ http://aquatica.protypo.co
 
 and the winner is -
 http://themes.evgenyfireform.com/sniper/demo
+
+
+separate branch uses kotlin - see origin/kotlin
